# FHE_Program

./: .gitignore  CMakeCache.txt  README.md
StockRank/: CMakeLists.txt  StockRank.cpp  case1.cpp  case2.cpp
